// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Boostrapper Router Content Route to Logout with Account 1`] = `
<div>
  LazyLogoutView
</div>
`;

exports[`Boostrapper Router Content Route to Shell with Account 1`] = `
<div>
  LazyShellView
</div>
`;

exports[`Boostrapper Router Content Route to Shell with no Account 1`] = `
<div>
  LazyLoginView
</div>
`;
